# t2v-serve

./: .dockerignore  Dockerfile  README.md  pyproject.toml
dev/: requests.http
t2v_serve/: app.py  download.py  settings.py  vectorizer.py
